fix: update popover color variable for improved visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,8 @@ body {
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
+    /* --popover: 0 0% 83.9%; */
+    --popover: 222 47% 11%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
